# EmbedSanitizer

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE.md  README.md  codecov.yml  install.sh
.github/workflows/: C_Integration.yml
etsan/: defs.h  dummy.c  fasttrack.h  fileDictionary.h  file_dictionary.h  install.sh  installx86_64.sh  race.h  raceReport.h  race_report.h  tsan_interface.cc  tsan_interface.h
etsan/libs/: buildLibAtomic.sh  libatomic.c
etsan/tests/: LockAcquire.cpp  LockRelease.cpp  Makefile  MultipleReads.cpp  ReadWrites.cpp  TestRead4.cpp  TestWrite4.cpp
llvm/lib/Transforms/Instrumentation/: EmbedSanitizerDebugInfo.h  EmbedSanitizerExtension.h  ThreadSanitizer.cpp
llvm/tools/clang/lib/Driver/: SanitizerArgs.cpp  Tools.cpp
tests/: CMakeLists.txt  LockAcquire.cpp  LockRelease.cpp  SyncFuncs.cpp  Threads.cpp  defs_test.cpp  fasttrack_read_test.cpp  fasttrack_sync_test.cpp  fasttrack_write_test.cpp  race_report_test.cpp  race_test.cpp  tsan_interface_test.cpp  tsan_interface_vptr_test.cpp
tests/parsec_benchmarks/: Makefile.inc  README.md  run.sh
tests/parsec_benchmarks/blackscholes/: Makefile  blackscholes.m4.cpp
tests/parsec_benchmarks/fluidanimate/: Makefile
tests/parsec_benchmarks/fluidanimate/input/: in_5K.fluid
tests/parsec_benchmarks/streamcluster/: Makefile  streamcluster.cpp
tests/parsec_benchmarks/swaptions/: HJM_Securities.cpp  Makefile
tests/unittests/: Simple.cpp  SyncFuncs.cpp  Threads.cpp
tests/unittests/reports/: Bridge.h  Counter.h  Makefile  README.md  Register.cpp  Threads.cpp
